# openSource_scanner

./: .env.example  .gitignore  README.md  pyproject.toml
.agent-context/: handoff.md  session-log.md
.agent-context/decisions/: DEC-2026-05-15-001-v1-github-local-mvp.md  DEC-2026-05-16-001-balanced-category-reports.md  DEC-2026-05-20-001-solo-dev-2c-mainline.md  DEC-2026-05-20-002-ban-erp-from-default-scans.md  DEC-2026-06-01-001-revenue-pipeline-mainline.md
.github/workflows/: daily-scan.yml
config/: scoring.yml  sources.yml
config/consumer-round-1/: scoring.yml  sources.yml
config/consumer-round-2/: scoring.yml  sources.yml
config/consumer-round-3/: scoring.yml  sources.yml
docs/: opportunity-workflow.md
docs/automation/: market-pain-radar.md
docs/research/: 2026-05-19-deep-research-direction.md  2026-05-20-fragmented-waiting-time-games.md  2026-05-20-solo-dev-2c-entertainment-pivot.md
records/market-pain/: README.md  index.md
reports/: 2026-05-16.md  2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md
scripts/: run-daily-scan.ps1
src/open_source_scanner/: __main__.py  config.py  memo.py  models.py  normalize.py  report.py  scoring.py  shortlist.py  storage.py  taxonomy.py
tests/: test_cli.py  test_config.py  test_github_connector.py  test_memo.py  test_normalize.py  test_report.py  test_scoring.py  test_shortlist.py  test_storage.py  test_taxonomy.py
(+2 files in other folders)
