[project]
name = "open-source-scanner"
version = "0.1.0"
description = "Scan open-source communities for packaging and monetization opportunities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.scripts]
oss-scan = "open_source_scanner.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
